--- a/Strider.BackEnd.Api/appsettings.json
+++ b/Strider.BackEnd.Api/appsettings.json
@@ -5,5 +5,28 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Cors": {
+    "Methods": [
+      "GET",
+      "PUT",
+      "PATCH",
+      "POST",
+      "DELETE"
+    ],
+    "Origins": [
+      "http://localhost:5173"
+    ],
+    "Headers": [
+      "Origin",
+      "X-Requested-With",
+      "Content-Type",
+      "Accept",
+      "Authorization",
+      "X-Access-Token"
+    ],
+    "ExposedHeaders": [
+      "X-Access-Token"
+    ]
+  }
 }
